src/test/deca/context/valid/oracle/printx_different_types.deca
{
    int i = 0;
    float f = 1.0;
    printx(1);
    printx(i);
    printx(1.0);
    printx(f);
    printx("Hello Moon !");
}