src/test/deca/context/invalid/oracle/use_var_with_wrong_inst2.deca
{
 int i = 0;
 i = 1.0;
}
